Fixed Picture Bug in Dark Mode

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@
     text-transform: none;
     transition:all .2s linear;
 }
-
+.togglebtn{
+    border: none;
+}
 h1, h3{
     font-family: 'Oswald', sans-serif;
 }
